feat: Added parser framework 1. Use grammar_rules.json to store syntax rules and terminal_symbols.json to store terminators. 2. Use GrammarConfigLoader.cs to read the grammar_rules 3. Use the ParserTableGenerator.cs to calculate the ACTION table 4. The Parse() function in the Parser.cs analyzes tokens based on the ACTION table based on the stack 5.TODO:The Parse() function still needs to be improved to complete the construction of the syntax tree

--- a/src/MiniCSharpCompiler.Core/MiniCSharpCompiler.Core.csproj
+++ b/src/MiniCSharpCompiler.Core/MiniCSharpCompiler.Core.csproj
@@ -11,4 +11,29 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- <EmbeddedResource Include="Config\lexer_rules.json" /> -->
+    <EmbeddedResource Include="Config\grammar_rules.json" />
+    <EmbeddedResource Include="Config\terminal_symbols.json" />
+  </ItemGroup>
+
+  <!-- <ItemGroup>
+    <Content Include="Config\grammar_rules.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Config\grammar_rules.json">
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Config\terminal_symbols.json">
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </None>
+  </ItemGroup> -->
+
+
 </Project>
