--- a/src/MiniCSharpCompiler/MiniCSharpCompiler.csproj
+++ b/src/MiniCSharpCompiler/MiniCSharpCompiler.csproj
@@ -9,6 +9,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
 </Project>
